# audioneex

./: .gitignore  .travis.yml  Android.mk  AndroidManifest.xml  CMakeLists.txt  README  README.md  android-configure  build  build.bat  build.sh  build_android  build_dist_libs  build_dist_libs.bat  build_linux  build_win.bat  install_linux  install_windows.bat
DAO/: CBDataStore.cpp  CBDataStore.h  KVDataStore.h  TCDataStore.cpp  TCDataStore.h  dao_common.h
audio/: AudioBlock.h  AudioFileWriter.cpp  AudioFileWriter.h  AudioProcessor.h  AudioSource.cpp  AudioSource.h  AudioSourceWav.h  FFT.h  RingBuffer.h
bindings/python/: audioneex-py.cpp  audioneex-py.h  audioneex.i  makebind.bat  rebuild.bat  setup.py
bindings/python/audioneex/: __init__.py  audioneex.py
bindings/python/audioneex/examples/: audiofp.py  audioid.py
bindings/python/audioneex/tests/: _base.py  run.py  test_audiobuffer.py  test_audiosourcefile.py  test_callbacks.py  test_database.py  test_idresults.py  test_indexer.py  test_recognizer.py
cmake/: install.cmake  install_android.cmake  install_linux.cmake  install_windows.cmake  make_android.cmake  make_linux.cmake  make_windows.cmake  run_tests.cmake  setup_tests.cmake
docs/: Doxyfile  about.rst  build.rst  conf.py  examples.rst  index.rst  licenses.rst  make.bat  references.rst  requirements.txt  usage.rst
docs/api/: audioprovider.rst  constants.rst  datastore.rst  exceptions.rst  index.rst  indexer.rst  recognizer.rst
examples/android/: README
examples/android/OTA/: build.gradle
examples/android/OTA/app/: build.gradle
examples/android/OTA/app/src/main/: AndroidManifest.xml
examples/android/OTA/app/src/main/cpp/: CMakeLists.txt  audioneex-jni.cpp  audioneex-jni.h
examples/android/OTA/app/src/main/java/com/audioneex/audio/: AudioBuffer.java  AudioBuffer16Bit.java  AudioBufferFloat.java  AudioFactory.java  AudioFormat.java  AudioSourceService.java  AudioSourceServiceListener.java  BufferQueue.java
examples/android/OTA/app/src/main/java/com/audioneex/otaexample/: MainActivity.java  OTAFragment.java
examples/android/OTA/app/src/main/java/com/audioneex/recognition/: AudioIdentificationListener.java  RecognitionService.java  RecognitionServiceException.java  Recognizer.java
examples/android/OTA/app/src/main/jni/: Android.mk  Application.mk  audioneex-jni.cpp  audioneex-jni.h
examples/android/OTA/app/src/main/res/layout/: activity_main.xml  audioneex_ota_fragment.xml
examples/android/OTA/app/src/main/res/menu/: main.xml
examples/android/OTA/app/src/main/res/values/: dimens.xml  strings.xml
examples/android/OTA/gradle/wrapper/: gradle-wrapper.properties
examples/android/Test/app/: audioneex.keystore  build.gradle
examples/android/Test/app/src/main/: AndroidManifest.xml
examples/android/Test/app/src/main/cpp/: CMakeLists.txt  audioneex-test.cpp  audioneex-test.h
examples/android/Test/app/src/main/java/com/audioneex/test/: TestApp.java
examples/android/Test/app/src/main/jni/: Android.mk  Application.mk  audioneex-test.cpp  audioneex-test.h
examples/android/Test/app/src/main/res/layout/: main_layout.xml
examples/android/Test/app/src/main/res/values/: strings.xml
examples/winux/: CMakeLists.txt  CmdLineParser.h  IdTask.h  README  ex_common.h  example1.cpp  example1.h  example2.cpp  example2.h  example3.cpp  example3.h  example4.cpp  example4.h  fileid.cpp  fileid.h  fpaudio.cpp  fpaudio.h  fpidx.cpp  fpidx.h  otaid.cpp  otaid.h
scripts/: dependencies.sh
src/: CMakeLists.txt  Parameters.h  audioneex.h  common.h
src/audio/: AudioBlock.h  AudioBuffer.h  AudioFileWriter.cpp  AudioFileWriter.h  AudioProcessor.h  AudioSource.cpp  AudioSource.h  AudioSourceWav.h  FFT.h  RingBuffer.h
src/audiocodes/: AudioCodes.cpp  AudioCodes.h  CMakeLists.txt
src/dbdrivers/: CBDataStore.cpp  CBDataStore.h  KVDataStore.h  TCDataStore.cpp  TCDataStore.h  dao_common.h
src/ident/: Fingerprint.cpp  Fingerprint.h  Fingerprinter.cpp  Fingerprinter.h  MatchFuzzyClassifier.cpp  MatchFuzzyClassifier.h  Matcher.cpp  Matcher.h  Recognizer - Copy.cpp  Recognizer - Copy.h  Recognizer.cpp  Recognizer.h
src/index/: BlockCodec.cpp  BlockCodec.h  DataStore.h  Indexer.cpp  Indexer.h
src/quant/: BinaryVector.h  Codebook.cpp  Codebook.h
src/tools/: BVQuantizer.cpp  BVQuantizer.h  Pipes.h  QFGenerator.h  Tester.h  Utils.h  gnuplot.cpp  performance.cpp  performance.h
tests/: CMakeLists.txt  catch.hpp  test_common.h  test_fingerprinter.cpp  test_fingerprinter.h  test_fingerprinting.cpp  test_indexer.cpp  test_indexer.h  test_indexing.cpp  test_indexing.h  test_matcher.cpp  test_matcher.h  test_matching.cpp  test_matching.h  test_recognizer.cpp  test_recognizer.h
tests/data/: rec1.fp  rec2.fp
tests/data/db/: data.idx  data.qfp
tools/: BVQuantizer.cpp  BVQuantizer.h  Pipes.h  QFGenerator.h  Tester.h  Utils.h  gnuplot.cpp  gnuplot.h  performance.cpp  performance.h
ubin/: Command.h  CommandExtractAudioClips.h  CommandFingerprintGenAnalysis.h  CommandGenerateFingerprintDB.h  CommandMakeAudioCodes.h  CommandPlotAudioSpectrum.h  ubin.cpp  ubin.h
